@@ -20,17 +20,16 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.microsoft.sqlserver:mssql-jdbc'
     implementation 'org.postgresql:postgresql'
     implementation 'mysql:mysql-connector-java:8.0.30' 
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.mongodb:mongodb-driver-sync'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // Add this dependency to support @ConfigurationProperties
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
-    
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
@@ -38,4 +37,13 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+
+test {
+    useJUnitPlatform()
+    jvmArgs '--enable-preview'
 }
